bison.output
Terminals unused in grammar

    tERROR


State 93 conflicts: 1 shift/reduce
State 94 conflicts: 1 shift/reduce


Grammar

    0 $accept: code $end

    1 code: function
    2     | code function

    3 function: tINT tID tLPAR args_declaration tRPAR body
    4         | tVOID tID tLPAR args_declaration tRPAR body

    5 args_declaration: %empty
    6                 | tVOID
    7                 | arg_declaration args_declaration1

    8 args_declaration1: %empty
    9                  | tCOMMA arg_declaration args_declaration1

   10 arg_declaration: tINT tID

   11 body: tLBRACE tRBRACE

   12 $@1: %empty

   13 body: tLBRACE $@1 stmts tRBRACE

   14 stmts: stmt
   15      | stmts stmt

   16 stmt: declaration_stmt
   17     | assign_call_stmt
   18     | print_stmt
   19     | return_stmt
   20     | if_stmt
   21     | while_stmt

   22 declaration_stmt: tINT id_list tSEMI

   23 id_list: id_decl id_list_item

   24 id_list_item: %empty
   25             | tCOMMA id_decl id_list_item

   26 id_decl: tID
   27        | tID tASSIGN expression

   28 assign_call_stmt: tID tASSIGN expression tSEMI
   29                 | function_call tSEMI

   30 function_call: tID tLPAR params_call tRPAR

   31 params_call: %empty
   32            | expression
   33            | params_call tCOMMA expression

   34 print_stmt: tPRINT tLPAR expression tRPAR tSEMI

   35 return_stmt: tRETURN expression tSEMI

   36 if_memo: %empty

   37 if_stmt: tIF if_memo tLPAR con tRPAR body
   38        | tIF if_memo tLPAR con tRPAR body tELSE body
   39        | tIF if_memo tLPAR con tRPAR body tELSE if_stmt

   40 $@2: %empty

   41 $@3: %empty

   42 while_stmt: tWHILE tLPAR $@2 con $@3 tRPAR body

   43 con: condition
   44    | tLPAR con tRPAR

   45 $@4: %empty

   46 con: con condition_memo tOR $@4 condition

   47 $@5: %empty

   48 con: con condition_memo tAND $@5 condition

   49 condition_memo: %empty

   50 $@6: %empty

   51 condition: expression condition_memo $@6 tNE expression

   52 $@7: %empty

   53 condition: expression condition_memo $@7 tEQ expression

   54 $@8: %empty

   55 condition: expression condition_memo $@8 tGE expression

   56 $@9: %empty

   57 condition: expression condition_memo $@9 tLE expression

   58 $@10: %empty

   59 condition: expression condition_memo $@10 tLT expression

   60 $@11: %empty

   61 condition: expression condition_memo $@11 tGT expression
   62          | tNOT condition_memo condition
   63          | expression condition_memo
   64          | tLPAR condition tRPAR

   65 expression: tNB
   66           | tID
   67           | expression tADD expression
   68           | expression tSUB expression
   69           | expression tMUL expression
   70           | expression tDIV expression
   71           | tLPAR expression tRPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    tID <s> (258) 3 4 10 26 27 28 30 66
    tNB <n> (259) 65
    tWHILE <while_info> (260) 42
    tVOID (261) 4 6
    tINT (262) 3 10 22
    tLBRACE (263) 11 13
    tRBRACE (264) 11 13
    tLPAR (265) 3 4 30 34 37 38 39 42 44 64 71
    tRPAR (266) 3 4 30 34 37 38 39 42 44 64 71
    tIF (267) 37 38 39
    tELSE (268) 38 39
    tPRINT (269) 34
    tRETURN (270) 35
    tADD (271) 67
    tSUB (272) 68
    tMUL (273) 69
    tDIV (274) 70
    tLT (275) 59
    tGT (276) 61
    tNE (277) 51
    tEQ (278) 53
    tGE (279) 55
    tLE (280) 57
    tASSIGN (281) 27 28
    tAND (282) 48
    tOR (283) 46
    tNOT (284) 62
    tSEMI (285) 22 28 29 34 35
    tCOMMA (286) 9 25 33
    tERROR (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    code (34)
        on left: 1 2
        on right: 0 2
    function (35)
        on left: 3 4
        on right: 1 2
    args_declaration (36)
        on left: 5 6 7
        on right: 3 4
    args_declaration1 (37)
        on left: 8 9
        on right: 7 9
    arg_declaration (38)
        on left: 10
        on right: 7 9
    body (39)
        on left: 11 13
        on right: 3 4 37 38 39 42
    $@1 (40)
        on left: 12
        on right: 13
    stmts (41)
        on left: 14 15
        on right: 13 15
    stmt (42)
        on left: 16 17 18 19 20 21
        on right: 14 15
    declaration_stmt (43)
        on left: 22
        on right: 16
    id_list (44)
        on left: 23
        on right: 22
    id_list_item (45)
        on left: 24 25
        on right: 23 25
    id_decl (46)
        on left: 26 27
        on right: 23 25
    assign_call_stmt (47)
        on left: 28 29
        on right: 17
    function_call (48)
        on left: 30
        on right: 29
    params_call (49)
        on left: 31 32 33
        on right: 30 33
    print_stmt (50)
        on left: 34
        on right: 18
    return_stmt (51)
        on left: 35
        on right: 19
    if_memo <if_info> (52)
        on left: 36
        on right: 37 38 39
    if_stmt (53)
        on left: 37 38 39
        on right: 20 39
    while_stmt (54)
        on left: 42
        on right: 21
    $@2 (55)
        on left: 40
        on right: 42
    $@3 (56)
        on left: 41
        on right: 42
    con (57)
        on left: 43 44 46 48
        on right: 37 38 39 42 44 46 48
    $@4 (58)
        on left: 45
        on right: 46
    $@5 (59)
        on left: 47
        on right: 48
    condition_memo <condition_info> (60)
        on left: 49
        on right: 46 48 51 53 55 57 59 61 62 63
    condition (61)
        on left: 51 53 55 57 59 61 62 63 64
        on right: 43 46 48 62 64
    $@6 (62)
        on left: 50
        on right: 51
    $@7 (63)
        on left: 52
        on right: 53
    $@8 (64)
        on left: 54
        on right: 55
    $@9 (65)
        on left: 56
        on right: 57
    $@10 (66)
        on left: 58
        on right: 59
    $@11 (67)
        on left: 60
        on right: 61
    expression (68)
        on left: 65 66 67 68 69 70 71
        on right: 27 28 32 33 34 35 51 53 55 57 59 61 63 67 68 69 70 71


State 0

    0 $accept: . code $end

    tVOID  shift, and go to state 1
    tINT   shift, and go to state 2

    code      go to state 3
    function  go to state 4


State 1

    4 function: tVOID . tID tLPAR args_declaration tRPAR body

    tID  shift, and go to state 5


State 2

    3 function: tINT . tID tLPAR args_declaration tRPAR body

    tID  shift, and go to state 6


State 3

    0 $accept: code . $end
    2 code: code . function

    $end   shift, and go to state 7
    tVOID  shift, and go to state 1
    tINT   shift, and go to state 2

    function  go to state 8


State 4

    1 code: function .

    $default  reduce using rule 1 (code)


State 5

    4 function: tVOID tID . tLPAR args_declaration tRPAR body

    tLPAR  shift, and go to state 9


State 6

    3 function: tINT tID . tLPAR args_declaration tRPAR body

    tLPAR  shift, and go to state 10


State 7

    0 $accept: code $end .

    $default  accept


State 8

    2 code: code function .

    $default  reduce using rule 2 (code)


State 9

    4 function: tVOID tID tLPAR . args_declaration tRPAR body

    tVOID  shift, and go to state 11
    tINT   shift, and go to state 12

    $default  reduce using rule 5 (args_declaration)

    args_declaration  go to state 13
    arg_declaration   go to state 14


State 10

    3 function: tINT tID tLPAR . args_declaration tRPAR body

    tVOID  shift, and go to state 11
    tINT   shift, and go to state 12

    $default  reduce using rule 5 (args_declaration)

    args_declaration  go to state 15
    arg_declaration   go to state 14


State 11

    6 args_declaration: tVOID .

    $default  reduce using rule 6 (args_declaration)


State 12

   10 arg_declaration: tINT . tID

    tID  shift, and go to state 16


State 13

    4 function: tVOID tID tLPAR args_declaration . tRPAR body

    tRPAR  shift, and go to state 17


State 14

    7 args_declaration: arg_declaration . args_declaration1

    tCOMMA  shift, and go to state 18

    $default  reduce using rule 8 (args_declaration1)

    args_declaration1  go to state 19


State 15

    3 function: tINT tID tLPAR args_declaration . tRPAR body

    tRPAR  shift, and go to state 20


State 16

   10 arg_declaration: tINT tID .

    $default  reduce using rule 10 (arg_declaration)


State 17

    4 function: tVOID tID tLPAR args_declaration tRPAR . body

    tLBRACE  shift, and go to state 21

    body  go to state 22


State 18

    9 args_declaration1: tCOMMA . arg_declaration args_declaration1

    tINT  shift, and go to state 12

    arg_declaration  go to state 23


State 19

    7 args_declaration: arg_declaration args_declaration1 .

    $default  reduce using rule 7 (args_declaration)


State 20

    3 function: tINT tID tLPAR args_declaration tRPAR . body

    tLBRACE  shift, and go to state 21

    body  go to state 24


State 21

   11 body: tLBRACE . tRBRACE
   13     | tLBRACE . $@1 stmts tRBRACE

    tRBRACE  shift, and go to state 25

    $default  reduce using rule 12 ($@1)

    $@1  go to state 26


State 22

    4 function: tVOID tID tLPAR args_declaration tRPAR body .

    $default  reduce using rule 4 (function)


State 23

    9 args_declaration1: tCOMMA arg_declaration . args_declaration1

    tCOMMA  shift, and go to state 18

    $default  reduce using rule 8 (args_declaration1)

    args_declaration1  go to state 27


State 24

    3 function: tINT tID tLPAR args_declaration tRPAR body .

    $default  reduce using rule 3 (function)


State 25

   11 body: tLBRACE tRBRACE .

    $default  reduce using rule 11 (body)


State 26

   13 body: tLBRACE $@1 . stmts tRBRACE

    tID      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tINT     shift, and go to state 30
    tIF      shift, and go to state 31
    tPRINT   shift, and go to state 32
    tRETURN  shift, and go to state 33

    stmts             go to state 34
    stmt              go to state 35
    declaration_stmt  go to state 36
    assign_call_stmt  go to state 37
    function_call     go to state 38
    print_stmt        go to state 39
    return_stmt       go to state 40
    if_stmt           go to state 41
    while_stmt        go to state 42


State 27

    9 args_declaration1: tCOMMA arg_declaration args_declaration1 .

    $default  reduce using rule 9 (args_declaration1)


State 28

   28 assign_call_stmt: tID . tASSIGN expression tSEMI
   30 function_call: tID . tLPAR params_call tRPAR

    tLPAR    shift, and go to state 43
    tASSIGN  shift, and go to state 44


State 29

   42 while_stmt: tWHILE . tLPAR $@2 con $@3 tRPAR body

    tLPAR  shift, and go to state 45


State 30

   22 declaration_stmt: tINT . id_list tSEMI

    tID  shift, and go to state 46

    id_list  go to state 47
    id_decl  go to state 48


State 31

   37 if_stmt: tIF . if_memo tLPAR con tRPAR body
   38        | tIF . if_memo tLPAR con tRPAR body tELSE body
   39        | tIF . if_memo tLPAR con tRPAR body tELSE if_stmt

    $default  reduce using rule 36 (if_memo)

    if_memo  go to state 49


State 32

   34 print_stmt: tPRINT . tLPAR expression tRPAR tSEMI

    tLPAR  shift, and go to state 50


State 33

   35 return_stmt: tRETURN . expression tSEMI

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    expression  go to state 54


State 34

   13 body: tLBRACE $@1 stmts . tRBRACE
   15 stmts: stmts . stmt

    tID      shift, and go to state 28
    tWHILE   shift, and go to state 29
    tINT     shift, and go to state 30
    tRBRACE  shift, and go to state 55
    tIF      shift, and go to state 31
    tPRINT   shift, and go to state 32
    tRETURN  shift, and go to state 33

    stmt              go to state 56
    declaration_stmt  go to state 36
    assign_call_stmt  go to state 37
    function_call     go to state 38
    print_stmt        go to state 39
    return_stmt       go to state 40
    if_stmt           go to state 41
    while_stmt        go to state 42


State 35

   14 stmts: stmt .

    $default  reduce using rule 14 (stmts)


State 36

   16 stmt: declaration_stmt .

    $default  reduce using rule 16 (stmt)


State 37

   17 stmt: assign_call_stmt .

    $default  reduce using rule 17 (stmt)


State 38

   29 assign_call_stmt: function_call . tSEMI

    tSEMI  shift, and go to state 57


State 39

   18 stmt: print_stmt .

    $default  reduce using rule 18 (stmt)


State 40

   19 stmt: return_stmt .

    $default  reduce using rule 19 (stmt)


State 41

   20 stmt: if_stmt .

    $default  reduce using rule 20 (stmt)


State 42

   21 stmt: while_stmt .

    $default  reduce using rule 21 (stmt)


State 43

   30 function_call: tID tLPAR . params_call tRPAR

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    $default  reduce using rule 31 (params_call)

    params_call  go to state 58
    expression   go to state 59


State 44

   28 assign_call_stmt: tID tASSIGN . expression tSEMI

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    expression  go to state 60


State 45

   42 while_stmt: tWHILE tLPAR . $@2 con $@3 tRPAR body

    $default  reduce using rule 40 ($@2)

    $@2  go to state 61


State 46

   26 id_decl: tID .
   27        | tID . tASSIGN expression

    tASSIGN  shift, and go to state 62

    $default  reduce using rule 26 (id_decl)


State 47

   22 declaration_stmt: tINT id_list . tSEMI

    tSEMI  shift, and go to state 63


State 48

   23 id_list: id_decl . id_list_item

    tCOMMA  shift, and go to state 64

    $default  reduce using rule 24 (id_list_item)

    id_list_item  go to state 65


State 49

   37 if_stmt: tIF if_memo . tLPAR con tRPAR body
   38        | tIF if_memo . tLPAR con tRPAR body tELSE body
   39        | tIF if_memo . tLPAR con tRPAR body tELSE if_stmt

    tLPAR  shift, and go to state 66


State 50

   34 print_stmt: tPRINT tLPAR . expression tRPAR tSEMI

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    expression  go to state 67


State 51

   66 expression: tID .

    $default  reduce using rule 66 (expression)


State 52

   65 expression: tNB .

    $default  reduce using rule 65 (expression)


State 53

   71 expression: tLPAR . expression tRPAR

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    expression  go to state 68


State 54

   35 return_stmt: tRETURN expression . tSEMI
   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   70           | expression . tDIV expression

    tADD   shift, and go to state 69
    tSUB   shift, and go to state 70
    tMUL   shift, and go to state 71
    tDIV   shift, and go to state 72
    tSEMI  shift, and go to state 73


State 55

   13 body: tLBRACE $@1 stmts tRBRACE .

    $default  reduce using rule 13 (body)


State 56

   15 stmts: stmts stmt .

    $default  reduce using rule 15 (stmts)


State 57

   29 assign_call_stmt: function_call tSEMI .

    $default  reduce using rule 29 (assign_call_stmt)


State 58

   30 function_call: tID tLPAR params_call . tRPAR
   33 params_call: params_call . tCOMMA expression

    tRPAR   shift, and go to state 74
    tCOMMA  shift, and go to state 75


State 59

   32 params_call: expression .
   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   70           | expression . tDIV expression

    tADD  shift, and go to state 69
    tSUB  shift, and go to state 70
    tMUL  shift, and go to state 71
    tDIV  shift, and go to state 72

    $default  reduce using rule 32 (params_call)


State 60

   28 assign_call_stmt: tID tASSIGN expression . tSEMI
   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   70           | expression . tDIV expression

    tADD   shift, and go to state 69
    tSUB   shift, and go to state 70
    tMUL   shift, and go to state 71
    tDIV   shift, and go to state 72
    tSEMI  shift, and go to state 76


State 61

   42 while_stmt: tWHILE tLPAR $@2 . con $@3 tRPAR body

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 77
    tNOT   shift, and go to state 78

    con         go to state 79
    condition   go to state 80
    expression  go to state 81


State 62

   27 id_decl: tID tASSIGN . expression

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    expression  go to state 82


State 63

   22 declaration_stmt: tINT id_list tSEMI .

    $default  reduce using rule 22 (declaration_stmt)


State 64

   25 id_list_item: tCOMMA . id_decl id_list_item

    tID  shift, and go to state 46

    id_decl  go to state 83


State 65

   23 id_list: id_decl id_list_item .

    $default  reduce using rule 23 (id_list)


State 66

   37 if_stmt: tIF if_memo tLPAR . con tRPAR body
   38        | tIF if_memo tLPAR . con tRPAR body tELSE body
   39        | tIF if_memo tLPAR . con tRPAR body tELSE if_stmt

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 77
    tNOT   shift, and go to state 78

    con         go to state 84
    condition   go to state 80
    expression  go to state 81


State 67

   34 print_stmt: tPRINT tLPAR expression . tRPAR tSEMI
   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   70           | expression . tDIV expression

    tRPAR  shift, and go to state 85
    tADD   shift, and go to state 69
    tSUB   shift, and go to state 70
    tMUL   shift, and go to state 71
    tDIV   shift, and go to state 72


State 68

   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   70           | expression . tDIV expression
   71           | tLPAR expression . tRPAR

    tRPAR  shift, and go to state 86
    tADD   shift, and go to state 69
    tSUB   shift, and go to state 70
    tMUL   shift, and go to state 71
    tDIV   shift, and go to state 72


State 69

   67 expression: expression tADD . expression

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    expression  go to state 87


State 70

   68 expression: expression tSUB . expression

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    expression  go to state 88


State 71

   69 expression: expression tMUL . expression

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    expression  go to state 89


State 72

   70 expression: expression tDIV . expression

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    expression  go to state 90


State 73

   35 return_stmt: tRETURN expression tSEMI .

    $default  reduce using rule 35 (return_stmt)


State 74

   30 function_call: tID tLPAR params_call tRPAR .

    $default  reduce using rule 30 (function_call)


State 75

   33 params_call: params_call tCOMMA . expression

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 53

    expression  go to state 91


State 76

   28 assign_call_stmt: tID tASSIGN expression tSEMI .

    $default  reduce using rule 28 (assign_call_stmt)


State 77

   44 con: tLPAR . con tRPAR
   64 condition: tLPAR . condition tRPAR
   71 expression: tLPAR . expression tRPAR

    tID    shift, and go to state 51
    tNB    shift, and go to state 52
    tLPAR  shift, and go to state 77
    tNOT   shift, and go to state 78

    con         go to state 92
    condition   go to state 93
    expression  go to state 94


State 78

   62 condition: tNOT . condition_memo condition

    $default  reduce using rule 49 (condition_memo)

    condition_memo  go to state 95


State 79

   42 while_stmt: tWHILE tLPAR $@2 con . $@3 tRPAR body
   46 con: con . condition_memo tOR $@4 condition
   48    | con . condition_memo tAND $@5 condition

    tRPAR     reduce using rule 41 ($@3)
    $default  reduce using rule 49 (condition_memo)

    $@3             go to state 96
    condition_memo  go to state 97


State 80

   43 con: condition .

    $default  reduce using rule 43 (con)


State 81

   51 condition: expression . condition_memo $@6 tNE expression
   53          | expression . condition_memo $@7 tEQ expression
   55          | expression . condition_memo $@8 tGE expression
   57          | expression . condition_memo $@9 tLE expression
   59          | expression . condition_memo $@10 tLT expression
   61          | expression . condition_memo $@11 tGT expression
   63          | expression . condition_memo
   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   70           | expression . tDIV expression

    tADD  shift, and go to state 69
    tSUB  shift, and go to state 70
    tMUL  shift, and go to state 71
    tDIV  shift, and go to state 72

    $default  reduce using rule 49 (condition_memo)

    condition_memo  go to state 98


State 82

   27 id_decl: tID tASSIGN expression .
   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   70           | expression . tDIV expression

    tADD  shift, and go to state 69
    tSUB  shift, and go to state 70
    tMUL  shift, and go to state 71
    tDIV  shift, and go to state 72

    $default  reduce using rule 27 (id_decl)


State 83

   25 id_list_item: tCOMMA id_decl . id_list_item

    tCOMMA  shift, and go to state 64

    $default  reduce using rule 24 (id_list_item)

    id_list_item  go to state 99


State 84

   37 if_stmt: tIF if_memo tLPAR con . tRPAR body
   38        | tIF if_memo tLPAR con . tRPAR body tELSE body
   39        | tIF if_memo tLPAR con . tRPAR body tELSE if_stmt
   46 con: con . condition_memo tOR $@4 condition
   48    | con . condition_memo tAND $@5 condition

    tRPAR  shift, and go to state 100

    $default  reduce using rule 49 (condition_memo)

    condition_memo  go to state 97


State 85

   34 print_stmt: tPRINT tLPAR expression tRPAR . tSEMI

    tSEMI  shift, and go to state 101


State 86

   71 expression: tLPAR expression tRPAR .

    $default  reduce using rule 71 (expression)


State 87

   67 expression: expression . tADD expression
   67           | expression tADD expression .
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   70           | expression . tDIV expression

    tMUL  shift, and go to state 71
    tDIV  shift, and go to state 72

    $default  reduce using rule 67 (expression)


State 88

   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   68           | expression tSUB expression .
   69           | expression . tMUL expression
   70           | expression . tDIV expression

    tMUL  shift, and go to state 71
    tDIV  shift, and go to state 72

    $default  reduce using rule 68 (expression)


State 89

   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   69           | expression tMUL expression .
   70           | expression . tDIV expression

    $default  reduce using rule 69 (expression)


State 90

   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   70           | expression . tDIV expression
   70           | expression tDIV expression .

    $default  reduce using rule 70 (expression)


State 91

   33 params_call: params_call tCOMMA expression .
   67 expression: expression . tADD expression
   68           | expression . tSUB expression
   69           | expression . tMUL expression
   70           | expression . tDIV expression

    tADD  shift, and go to state 69
    tSUB  shift, and go to state 70
    tMUL  shift, and go to state 71
    tDIV  shift, and go to state 72

    $default  reduce using rule 33 (params_call)


State 92

   44 con: tLPAR con . tRPAR
   46    | con . condition_memo tOR $@4 condition
   48    | con . condition_memo tAND $@5 condition

    tRPAR  shift, and go to state 102

    $default  reduce using rule 49 (condition_memo)

    condition_memo  go to state 97


State 93

   43 con: condition .
   64 condition: tLPAR condition . tRPAR

    tRPAR  shift, and go to state 103

    tRPAR     [reduce using rule 43 (con)]
    $default  reduce using rule 43 (con)


State 94
